lab/03-workloads-probes-scaling/manifests/rollout-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-rollout
  namespace: workloads-lab
  labels:
    app: web-rollout
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-rollout
  template:
    metadata:
      labels:
        app: web-rollout
    spec:
      containers:
        - name: web-rollout
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
