lab/03-workloads-probes-scaling/manifests/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-dashboard
  namespace: workloads-lab
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /load-dashboard
            pathType: Prefix
            backend:
              service:
                name: load-dashboard
                port:
                  number: 80
